--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".vim/pack/bundle/start/vim-colors-solarized"]
 	path = .vim/pack/bundle/start/vim-colors-solarized
 	url = git://github.com/altercation/vim-colors-solarized.git
+[submodule ".vim/pack/bundle/start/vim-sensible"]
+	path = .vim/pack/bundle/start/vim-sensible
+	url = git://github.com/tpope/vim-sensible.git
