--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".vim/pack/bundle/start/vim-sensible"]
 	path = .vim/pack/bundle/start/vim-sensible
 	url = git://github.com/tpope/vim-sensible.git
+[submodule ".vim/pack/bundle/start/ctrlp"]
+	path = .vim/pack/bundle/start/ctrlp
+	url = https://github.com/ctrlpvim/ctrlp.vim.git
