--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule ".vim/pack/bundle/start/ctrlp"]
 	path = .vim/pack/bundle/start/ctrlp
 	url = https://github.com/ctrlpvim/ctrlp.vim.git
+[submodule ".vim/pack/bundle/start/YouCompleteMe"]
+	path = .vim/pack/bundle/start/YouCompleteMe
+	url = git@github.com:Valloric/YouCompleteMe.git
