--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule ".vim/pack/bundle/start/tabline"]
 	path = .vim/pack/bundle/start/tabline
 	url = git@github.com:mkitt/tabline.vim.git
+[submodule ".vim/pack/bundle/start/tagbar"]
+	path = .vim/pack/bundle/start/tagbar
+	url = git@github.com:majutsushi/tagbar.git
