--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule ".vim/pack/bundle/start/tagbar"]
 	path = .vim/pack/bundle/start/tagbar
 	url = git@github.com:majutsushi/tagbar.git
+[submodule ".vim/pack/bundle/start/vim-airline-themes"]
+	path = .vim/pack/bundle/start/vim-airline-themes
+	url = git@github.com:vim-airline/vim-airline-themes.git
