--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule ".vim/pack/bundle/start/vim-airline-themes"]
 	path = .vim/pack/bundle/start/vim-airline-themes
 	url = git@github.com:vim-airline/vim-airline-themes.git
+[submodule ".vim/pack/bundle/start/vim-airline"]
+	path = .vim/pack/bundle/start/vim-airline
+	url = git@github.com:vim-airline/vim-airline.git
