--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule ".vim/pack/bundle/start/vim-signify"]
 	path = .vim/pack/bundle/start/vim-signify
 	url = git@github.com:mhinz/vim-signify.git
+[submodule ".vim/pack/bundle/start/vim-startify"]
+	path = .vim/pack/bundle/start/vim-startify
+	url = git@github.com:mhinz/vim-startify.git
