--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule ".vim/pack/bundle/start/vim-startify"]
 	path = .vim/pack/bundle/start/vim-startify
 	url = git@github.com:mhinz/vim-startify.git
+[submodule ".vim/pack/bundle/start/vim-mustache-handlebars"]
+	path = .vim/pack/bundle/start/vim-mustache-handlebars
+	url = git@github.com:mustache/vim-mustache-handlebars.git
