--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule ".vim/pack/bundle/start/vim-mustache-handlebars"]
 	path = .vim/pack/bundle/start/vim-mustache-handlebars
 	url = git@github.com:mustache/vim-mustache-handlebars.git
+[submodule ".vim/pack/bundle/start/tcomment_vim"]
+	path = .vim/pack/bundle/start/tcomment_vim
+	url = git@github.com:tomtom/tcomment_vim.git
