--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule ".vim/pack/bundle/start/YouCompleteMe"]
 	path = .vim/pack/bundle/start/YouCompleteMe
 	url = git@github.com:Valloric/YouCompleteMe.git
+[submodule ".vim/pack/bundle/start/vim-graphql"]
+	path = .vim/pack/bundle/start/vim-graphql
+	url = git@github.com:jparise/vim-graphql.git
