--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule ".vim/pack/bundle/start/vim-graphql"]
 	path = .vim/pack/bundle/start/vim-graphql
 	url = git@github.com:jparise/vim-graphql.git
+[submodule ".vim/pack/bundle/start/vim-jsx-typescript"]
+	path = .vim/pack/bundle/start/vim-jsx-typescript
+	url = git@github.com:peitalin/vim-jsx-typescript.git
