--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule ".vim/pack/bundle/start/typescript-vim"]
 	path = .vim/pack/bundle/start/typescript-vim
 	url = git@github.com:leafgarland/typescript-vim.git
+[submodule ".vim/pack/bundle/start/vim-jsx-typescript"]
+	path = .vim/pack/bundle/start/vim-jsx-typescript
+	url = git@github.com:peitalin/vim-jsx-typescript.git
