--- a/.gitmodules
+++ b/.gitmodules
@@ -40,9 +40,6 @@
 [submodule ".vim/pack/bundle/start/vim-pug"]
 	path = .vim/pack/bundle/start/vim-pug
 	url = git://github.com/digitaltoad/vim-pug.git
-[submodule ".vim/pack/bundle/start/YouCompleteMe"]
-	path = .vim/pack/bundle/start/YouCompleteMe
-	url = git@github.com:Valloric/YouCompleteMe.git
 [submodule ".vim/pack/bundle/start/vim-graphql"]
 	path = .vim/pack/bundle/start/vim-graphql
 	url = git@github.com:jparise/vim-graphql.git
@@ -52,3 +49,6 @@
 [submodule ".vim/pack/bundle/start/vim-jsx-typescript"]
 	path = .vim/pack/bundle/start/vim-jsx-typescript
 	url = git@github.com:peitalin/vim-jsx-typescript.git
+[submodule ".vim/pack/bundle/start/YouCompleteMe"]
+	path = .vim/pack/bundle/start/YouCompleteMe
+	url = git@github.com:ycm-core/YouCompleteMe.git
