--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -651,6 +651,8 @@
 				<key>Red Component</key>
 				<real>0.0</real>
 			</dict>
+			<key>Load Shell Integration Automatically</key>
+			<true/>
 			<key>Log Directory</key>
 			<string></string>
 			<key>Minimum Contrast</key>
